Download progress report

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 aws-sdk-s3 = "1.97.0"
+sipper = "0.1.0"
 thiserror = "2.0.12"
 tokio = { version = "1.46.1", features = ["fs"] }
 
