--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2024"
 
 [dependencies]
 aws-sdk-s3 = "1.97.0"
+bytes = "1.10.1"
+futures = "0.3.31"
+http-body = "1.0.1"
+pin-project-lite = "0.2.16"
+reqwest = { version = "0.12.22", features = ["stream"], default-features = false }
 sipper = "0.1.0"
 thiserror = "2.0.12"
 tokio = { version = "1.46.1", features = ["fs"] }
