--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2024"
 aws-sdk-s3 = "1.97.0"
 aws-smithy-runtime-api = "1.8.3"
 backon = "1.5.1"
+serde = { version = "1.0.219", features = ["derive"] }
 sipper = "0.1.0"
 thiserror = "2.0.12"
 tokio = { version = "1.46.1", features = ["fs"] }
 
 [dev-dependencies]
 aws-config = "1.8.2"
+ron = "0.10.1"
 tokio = { version = "1.46.1", features = ["full"] }
