--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ backon = "1.5.1"
 serde = { version = "1.0.219", features = ["derive"] }
 sipper = "0.1.0"
 thiserror = "2.0.12"
+time = "0.3.41"
 tokio = { version = "1.46.1", features = ["fs"] }
 
 [dev-dependencies]
